--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ single screen game/Library/Artifacts/36/36bba49fa5529fd0ff9ce28d40381bb9
 single screen game/Library/Artifacts/35/35d86638dc884dfba8a586ba58fc7335
 single screen game/Library/Artifacts/3f/3f551e8c08cec6306eb39a1df15f55df
 single screen game/Temp/UnityLockfile
+single screen game/Library/ArtifactDB
+single screen game/Library/ArtifactDB
+single screen game/Library/ArtifactDB
