--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ single screen game/Temp/UnityLockfile
 single screen game/Library/ArtifactDB
 single screen game/Library/ArtifactDB
 single screen game/Library/ArtifactDB
+single screen game/Library/ArtifactDB
